src/catalog/components/RealtyFilters/blocks/SelectListFilter/selectListFilter.scss
.select-filter {
  &__list {
    font-size: 16px;
    min-width: 256px;
    user-select: none;
  }

  &__item {
    input {
      &:checked + label {
        color: var(--cl-primary);
      }
    }

    label {
      cursor: pointer;
      display: block;
      padding: 10px 0;
    }

    &:not(:last-child) {
      border-bottom: 1px solid var(--cl-border-card);
    }

    &:first-child label {
      padding-top: 0;
    }
    &:last-child label {
      padding-bottom: 0;
    }
  }

  &--no-border {
    border: none;
    padding-top: 0;
    padding-bottom: 0;
  }
}

